# PowerBI_Airflow_Plugin

./: ReadMe.md  provider.yaml  pyproject.toml
dags/: PowerBI_dummy.py  example_dag.py  powerbi_dag.py  try_oauth_dag.py
hooks/: PowerBIHook.py  PowerBI_dummy.py  powerbi_hook.py
operators/: PowerBIRefreshDatasetOperator.py  PowerBIRefreshDataset_dummy.py  powerbi_refresh_dataset_operator.py
plugins/: PowerBIHook.py  PowerBIRefreshDatasetOperator.py  powerbi_hook.py  powerbi_plugin.py  powerbi_refresh_dataset_operator.py
plugins/hooks/: PowerBI_dummy.py  powerbi.py  powerbi_hook.py
plugins/operators/: powerbi_refresh_dataset_operator.py  try_openauth.py
src/airflow_powerbi_plugin/: powerbi_plugin.py
src/airflow_powerbi_plugin/hooks/: powerbi.py
src/airflow_powerbi_plugin/operators/: powerbi.py
src/powerbi/operators/: powerbi_refresh_dataset_operator.py
tests/hooks/: test_powerbi.py
tests/operators/: test_powerbi.py
