[project]
name = "airflow_powerbi_plugin"
version = "0.0.3a1"
authors = [
  { name="Ambika Garg", email="ambikagarg1101@gmail.com" },
]
description = "Airflow PowerBI plugin"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/ambika-garg/PowerBI_Airflow_Plugin"